--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "vue": "^3.0.0-rc.1",
+    "vue-router": "^4.0.0-beta.13",
     "xstate": "^4.13.0"
   },
   "devDependencies": {
