--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1",
+    "vue": "^3.0.0",
     "vue-router": "^4.0.0-beta.13",
     "xstate": "^4.13.0"
   },
